@@ -3,7 +3,6 @@ package com.Lino.battlePass.managers;
 import com.Lino.battlePass.models.Mission;
 import com.Lino.battlePass.models.MissionTemplate;
 import org.bukkit.configuration.ConfigurationSection;
-import org.bukkit.configuration.file.FileConfiguration;
 
 import java.util.*;
 import java.util.concurrent.ThreadLocalRandom;
@@ -16,7 +15,7 @@ public class MissionGenerator {
         this.configManager = configManager;
     }
 
-    public List<Mission> generateDailyMissions(String missionDate) {
+    public List<Mission> generateDailyMissions() {
         ConfigurationSection pools = configManager.getMissionsConfig().getConfigurationSection("mission-pools");
         if (pools == null) {
             return new ArrayList<>();
@@ -24,7 +23,6 @@ public class MissionGenerator {
 
         List<Mission> newMissions = new ArrayList<>();
         List<WeightedMissionTemplate> weightedTemplates = new ArrayList<>();
-        Map<String, MissionTemplate> uniqueTemplates = new HashMap<>();
 
         for (String key : pools.getKeys(false)) {
             ConfigurationSection missionSection = pools.getConfigurationSection(key);
@@ -42,12 +40,10 @@ public class MissionGenerator {
             MissionTemplate template = new MissionTemplate(displayName, type, target,
                     minRequired, maxRequired, minXP, maxXP);
 
-            uniqueTemplates.put(key, template);
             weightedTemplates.add(new WeightedMissionTemplate(template, weight, key));
         }
 
         int missionsToGenerate = configManager.getDailyMissionsCount();
-        Set<String> usedMissionKeys = new HashSet<>();
 
         for (int i = 0; i < missionsToGenerate && !weightedTemplates.isEmpty(); i++) {
             WeightedMissionTemplate selected = selectWeightedRandom(weightedTemplates);
@@ -55,7 +51,6 @@ public class MissionGenerator {
             if (selected != null) {
                 Mission mission = createMissionFromTemplate(selected.template);
                 newMissions.add(mission);
-                usedMissionKeys.add(selected.key);
 
                 weightedTemplates.removeIf(w -> w.key.equals(selected.key));
             }
@@ -83,7 +78,7 @@ public class MissionGenerator {
             }
         }
 
-        return weightedTemplates.get(weightedTemplates.size() - 1);
+        return weightedTemplates.getLast();
     }
 
     private Mission createMissionFromTemplate(MissionTemplate template) {
